--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,5 @@
-<div class="bg-light p-5 text-center rounded-lg m-5" id="about-container">
+<div class="bg-light p-5 text-center rounded-lg m-5" id="home-container">
   <h1 class="display-5 text-white fw-bolder">Welcome to ZefBlog!</h1>
   <p class="lead text-white fw-bolder">I'm super excited to have you here! Be kind and browse :)</p>
   <%= link_to "Log in", login_path, class: "btn btn-success btn-lg m-5" %>
-  <%= link_to "Sign up", signup_path, class: "btn btn-info btn-lg m-5" %>
 </div>
